# GMTK-2026

./: .gitmodules  CMakeLists.txt  README.md
.github/: final.md  initial.md
assets/shaders/: blit.frag  blit.vert  gamma_blit.frag  grayscale.comp  sprite.frag  sprite.vert
cmake/: CompilerOptions.cmake  EmbedAssets.cmake  Platform.cmake
engine/: CMakeLists.txt
engine/application/: application.cpp  application.h  input.cpp  input.h  window.cpp  window.h
engine/graphics/: atlas.h  light_batch.cpp  light_batch.h  renderer.cpp  renderer.h  sprite_batch.cpp  sprite_batch.h  texture.cpp  texture.h
engine/scene/: camera.cpp  camera.h  scene.cpp  scene.h  world.cpp  world.h
engine/scene/serialize/: serialize.h
engine/utils/: utils.h
platform/windows/: CMakeLists.txt  app_res.rc  main.cpp
